kubernetes.tpl.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: _APP_NAME_-_CI_ENVIRONMENT_SLUG_-svc
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: _APP_PORT_
      protocol: TCP
      name: http
  selector:
    app: _APP_NAME_-_CI_ENVIRONMENT_SLUG_
